# jppy

./: .gitignore  README.md  main.py  pyproject.toml
jppy/: tokenizer.py
scripts/: test.py
