[tool.poetry]
name = "jppy"
version = "0.1.0"
description = ""
authors = ["Pacharapol Withayasakpunt <polv@polv.cc>"]

[tool.poetry.dependencies]
python = "^3.10"
SudachiPy = "^0.6.6"
SudachiDict-full = "^20220519"
fastapi = "^0.79.0"
gunicorn = "^20.1.0"
uvicorn = "^0.18.2"
fastapi-sessions = "^0.3.2"
regex = "^2022.7.25"

[tool.poetry.dev-dependencies]
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
